--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
-<div id="root"></div>
-<script>
-    const dataElement = document.getElementById('root');
-    const interval = setInterval(() => {
-        fetch('/throughput')
-            .then(res => res.json())
-            .then(data => {
+<html>
+    <head>
+        <script>
+            const webSocket = new WebSocket(`${location.protocol == 'https' ? 'wss' : 'ws'}://${location.host}/ws`);
+            webSocket.onmessage = (event) => {
+                const data = JSON.parse(event.data);
+                const dataElement = document.getElementById('throughput');
+                const countElement = document.getElementById('counter');
                 dataElement.innerHTML = `${data.rate} req/sec`;
-            })
-        },
-        1000,
-    );
-</script>
+                countElement.innerHTML = `Handling ${data.websocketCount} connections`;
+            };
+        </script>
+    </head>
+    <body>
+        <div id="throughput"></div>
+        <div id="counter"></div>
+    </body>
+</html>
