--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         </script>
     </head>
     <body>
+        <p>Grab sourcecode from <a href="https://github.com/rmamba/rest2redis">GitHUB</a>. Please like and share if you find it useful.</p>
         <div id="throughput"></div>
         <div id="counter"></div>
     </body>
